--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   firebase_core: ^0.5.2+1
   cloud_firestore: ^0.14.3+1
   provider: ^4.3.2+2
+  flutter_datetime_picker: ^1.4.0
+  datetime_picker_formfield: ^1.0.0
 
 dev_dependencies:
   flutter_test:
